--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ body {
       <div class="container">
       <div>
       <h1 id="bt12" style="font-size:15vw;">BT12</h1>
+        <i class="fab fa-linkedin"></i>
       </div>
       </div>
     </body>
