--- a/d1ckh3@d.html
+++ b/d1ckh3@d.html
@@ -39,7 +39,7 @@ body {
     <body>
       <div class="container">
         
-        <div><h1 id="bt12" style="font-size:5vw;">D1ckh3@d</h1></div>
+        <div><h1 id="bt12" style="font-size:3vw;">D1ckh3@d</h1></div>
         
        <script>
     var config = {
@@ -67,7 +67,12 @@ body {
         this.load.image('sky', 'assets/skies/space3.png');
         this.load.image('logo', 'assets/sprites/phaser3-logo.png');
         this.load.image('red', 'assets/particles/red.png');
-    }
+        game.scale.pageAlignHorizontally = true;
+        game.scale.pageAlignVertically = true;
+        game.scale.refresh();
+
+             }
+
 
     function create ()
     {
