--- a/d1ckh3@d.html
+++ b/d1ckh3@d.html
@@ -65,11 +65,8 @@ body {
         this.load.setBaseURL('http://labs.phaser.io');
 
         this.load.image('sky', 'assets/skies/space3.png');
-        this.load.image('logo', 'assets/sprites/phaser3-logo.png');
+        this.load.image('logo', 'strawberry.png');
         this.load.image('red', 'assets/particles/red.png');
-        game.scale.pageAlignHorizontally = true;
-        game.scale.pageAlignVertically = true;
-        game.scale.refresh();
 
              }
 
