--- a/d1ckh3@d.html
+++ b/d1ckh3@d.html
@@ -64,7 +64,7 @@ body {
     {
         this.load.image('logo', '/strawberry.png');
         this.load.image('red', 'assets/particles/red.png');
-
+        this.cameras.main.backgroundColor = Phaser.Display.Color.HexStringToColor("#008E97");
              }
 
 
