--- a/d1ckh3@d.html
+++ b/d1ckh3@d.html
@@ -63,7 +63,6 @@ body {
     function preload ()
     {
         this.load.image('logo', '/strawberry.png');
-        this.load.image('red', 'assets/particles/red.png');
         this.cameras.main.backgroundColor = Phaser.Display.Color.HexStringToColor("#008E97");
              }
 
@@ -72,7 +71,7 @@ body {
     {
         this.add.image(400, 300, 'sky');
 
-        var particles = this.add.particles('red');
+        var particles = this.add.particles('logo');
 
         var emitter = particles.createEmitter({
             speed: 100,
